Added the Header

--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link href="https://cdn.lineicons.com/5.0/lineicons.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+      integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="index.css" />
+    <link
+      rel="icon"
+      sizes="192x192"
+      href="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_192,h_192/portal/c/logo_2022.png"
+    />
+    <title>
+      Order Food and Groceries. Discover the best restaurants. Swiggy it!
+    </title>
   </head>
   <body>
-    <div class="app">Not Rendered</div>
+    <div id="app">Not Rendered</div>
   </body>
-  <script type="module" src="app.js"></script>
+  <script type="module" src="./utils/app.js"></script>
 </html>
