--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@
   <body>
     <div id="app">Not Rendered</div>
   </body>
-  <script type="module" src="./utils/app.js"></script>
+  <script type="module" src="./components/app.js"></script>
 </html>
